tests/01-invalid_type.stderr
error: unexpected token: expected a `{integer}` type
 --> tests/01-invalid_type:6:11
  |
6 | #[bitflag(Custom)]
  |           ^^^^^^
